--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ body {
   }
 }
 
-.text-to-highlight {
+.highlighted-text {
   position: relative;
 }
 
@@ -41,6 +41,5 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  opacity: 0.3;
   z-index: -1;
 }
