--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,33 @@ body {
   left: 0;
   z-index: -1;
 }
+
+.current-experiment-pulse-indicator {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+
+  border-radius: 50%;
+  background: rgb(107, 253, 107);
+  box-shadow: 0 0 0 0 rgba(107, 253, 107, 1);
+
+  transform: scale(1);
+  animation: current-experiment-pulse 2s infinite;
+}
+
+@keyframes current-experiment-pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(107, 253, 107, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(107, 253, 107, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(107, 253, 107, 0);
+  }
+}
