--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,17 @@ body {
   background: white;
 }
 
+#homepage {
+  width: 100%;
+  height: 100%;
+  min-height: unset;
+}
+
+#grid-canvas-bg {
+  width: 100%;
+  height: 100%;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
