add: small todo component to track progress

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,23 @@ body {
     box-shadow: 0 0 0 0 rgba(107, 253, 107, 0);
   }
 }
+
+.current-todos {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+
+  max-width: 300px;
+  max-height: 300px;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  border: 1px dashed;
+  border-radius: 8px;
+  padding: 16px;
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
